fix: unnecessary overflow x

--- a/styles/CardsList.module.css
+++ b/styles/CardsList.module.css
@@ -168,6 +168,5 @@
 @media (max-width: 1080px) {
   .commandersContainer {
     display: block;
-    overflow-x: scroll;
   }
 }
