--- a/styles/Metagame.module.css
+++ b/styles/Metagame.module.css
@@ -2,7 +2,7 @@
   display: flex;
   min-height: 100dvh;
   width: 80dvw;
-  margin-bottom: 5rem;
+  margin-bottom: 2rem;
   flex-direction: column;
 }
 
@@ -109,12 +109,6 @@
   margin-top: 1rem;
   align-items: center;
   justify-content: center;
-}
-
-@media (max-width: 1080px) {
-  .commandersContainer {
-    overflow-x: scroll;
-  }
 }
 
 .cardsContainer {
